--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AshbyLB/sql-employee-tracker#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "inquirer": "^8.1.5",
     "mysql2": "^2.3.0"
   }
